# tabbify-service-supervisor

./: .dockerignore  .env.example  .gitignore  APP_LAYER_CONTRACT.md  Cargo.toml  Dockerfile  README.md  build.rs  clippy.toml  flake.nix  justfile  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: release.yml
deploy/: .gitignore  Dockerfile  README.md  tabbify-supervisor.service
deploy/buildkit/: Dockerfile  entrypoint.sh
docs/: phase2-deploy-e2e.md
docs/superpowers/plans/: 2026-05-26-per-app-runner-architecture.md  2026-05-26-restart-supervision.md  2026-05-26-runtime-lifecycle-contract.md  2026-05-26-warm-start.md  2026-05-27-phase2-deploy-from-registry.md
docs/superpowers/specs/: 2026-05-25-firecracker-runtime-design.md  2026-05-26-dockerized-supervisor-node-design.md  2026-05-26-per-app-runner-architecture-design.md  2026-05-26-restart-supervision-design.md  2026-05-26-runtime-lifecycle-contract-design.md  2026-05-26-warm-start-design.md  2026-05-27-build-deploy-pipeline-design.md
nixos/: tabbify-node.nix
scripts/: confirm-ecr-digest.sh  deploy-rollback-smoke.sh  install.sh
src/: api.rs  app_runtime.rs  app_ula.rs  build.rs  build_backend.rs  capability_tags.rs  config.rs  control_proto.rs  docker.rs  fetcher.rs  firecracker.rs  git.rs  host.rs  lib.rs  main.rs  manifest.rs  mesh.rs  mesh_self_mint.rs  oci_pull.rs  oci_pull_auth.rs  oci_pull_bearer_tests.rs  oci_pull_tests.rs  oci_pull_transport.rs  openapi.rs  oras.rs  readiness.rs  registry.rs  runtime.rs  skopeo.rs  tcp_forward.rs  tool_exec.rs  unified_manifest.rs  version.rs  watchdog_pet.rs
src/api/: atomic_record.rs  dev_session_record.rs  dev_sessions.rs  dev_sessions_tests.rs  dto.rs  forge_proxy.rs  git_proxy.rs  git_proxy_tests.rs  handlers.rs  mod.rs  ssh_jump.rs  tests.rs  workspace_cap_reuse.rs  workspace_record.rs  workspaces.rs  workspaces_tests.rs
src/boot_health/: mod.rs
src/docker/: build.rs  mod.rs  protocol.rs  push.rs  runtime.rs  runtime_tests.rs  tests.rs
src/firecracker/: build_vm.rs  cpu_scope.rs  cred_restore.rs  egress_filter.rs  link_allocator.rs  link_allocator_store.rs  link_allocator_tests.rs  linux.rs  linux_tests.rs  mod.rs  pidfile.rs  port_plan.rs  protocol.rs  proxy_firewall.rs  snapshot.rs  snapshot_decision.rs  stateful.rs  stub.rs
src/mesh_command/: mod.rs  reboot_guard.rs  sink.rs
src/orchestrator/: api.rs  build.rs  client.rs  handle.rs  manifest_retention.rs  mod.rs  monitor.rs  restart.rs  spawn.rs  wg_port.rs
src/runner/: active.rs  build.rs  config.rs  control.rs  mod.rs  registry.rs  serve.rs  wire.rs
src/selfupdate/: confirm.rs  dataplane.rs  fetch.rs  manifest.rs  mod.rs  probe.rs  run.rs  swap.rs  watchdog.rs
src/watchdog_pet/: mod.rs  tier1_backoff.rs  tier2.rs
tests/: fc_integration.rs  integration.rs  openapi_served.rs  orchestrator_integration.rs  runner_integration.rs  runtime_override.rs  self_update_swap.rs  systemd_unit_contract.rs
tests/fixtures/: hello.wasm
tests/fixtures/docker-app/: Dockerfile  server.py
