[package]
name = "tabbify-service-supervisor"
version = "1.4.37"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Tabbify app-layer supervisor: joins the mesh, fetches WASM apps from S3 by UUID, runs them per a TOML lifecycle, serves them over the mesh."
publish = false
# Embed the release version at build time (see build.rs).
build = "build.rs"

# Thin binary entrypoints; all logic lives in the library.
[[bin]]
name = "supervisord"
path = "src/main.rs"

[[bin]]
name = "tabbify-runner"
path = "src/bin/runner.rs"

[lib]
name = "tabbify_supervisor"
path = "src/lib.rs"

[lints.clippy]
# Clean clippy: warnings = errors in CI (`cargo clippy --all-targets -- -D warnings`).
all = { level = "warn", priority = -1 }

[dependencies]
# Mesh membership (joiner-side library), pinned to the mesh release rev.
# Public mesh repo → keyless https fetch (CI + local), no deploy key needed.
mesh-joiner = { git = "https://github.com/tabbify-io/tabbify-service-mesh.git", package = "tabbify-mesh-joiner", rev = "c5d3d49b7e59e6800e49805642a15a7765c74b78" }

# HTTP server
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"

# OpenAPI / Swagger UI (axum 0.7). Pin utoipa-swagger-ui to 8.x — 9.x requires
# axum 0.8 which this crate does not use.
utoipa = { version = "5", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }

# Async runtime
tokio = { version = "1.52", features = ["full"] }

# HTTP request/response types shared by the runtime seam + the proxy paths.
http = "1"
http-body-util = "0.1"
bytes = "1"

# OCI layer extraction IN-PROCESS. The host `tar` the runner resolves on NixOS /
# Alpine is busybox tar, which STRIPS the leading `/` from absolute symlink
# targets (/bin/sh -> /bin/busybox becomes the broken bin/busybox), corrupting
# the guest rootfs. These crates preserve symlink targets verbatim and are
# portable (no dependency on which tar binary is on PATH). Already in the graph.
tar = "0.4"
flate2 = "1"
zstd = "0.13"

# S3 fetch (anonymous HTTPS GET). rustls so musl static builds don't pull openssl.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }

# Identifiers / hashing / encoding
uuid = { version = "1.23", features = ["v7", "serde"] }
blake3 = "1"
# sha256 verification of fetched release binaries against the `latest` manifest
# (self-update, contract spec §2). hex decodes/encodes the manifest digests.
sha2 = "0.10"
hex = "0.4"

# Serde + TOML (manifest)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# JSON Schema derive for the vendored `Runtime` enum (frozen contract type,
# vendored IDENTICALLY across cli / node / supervisor — contract D4).
schemars = "1"

# Concurrency
arc-swap = "1"
dashmap = "6"

# Config
clap = { version = "4.6", features = ["derive", "env"] }

# POSIX syscalls (kill(2) for fc pidfile stale-process cleanup)
libc = "0.2"

# systemd readiness notification (sd_notify(READY=1)) for the `Type=notify`
# unit. Best-effort: a no-op when NOTIFY_SOCKET is unset (dev / --no-mesh /
# non-systemd runs), so it never affects local runs.
sd-notify = "0.5"

# Errors
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Temporary directories for build workdirs (also used in tests).
tempfile = "3"

# OCI image-config parsing for the generic Firecracker runtime: read an
# image's entrypoint/cmd/env/workdir to translate into the guest PID-1 init.
# Default features (no distribution client) keep the dep light + musl-clean.
oci-spec = { version = "0.10", default-features = false, features = ["image"] }

[dev-dependencies]
tokio = { version = "1.52", features = ["full", "test-util"] }
http-body-util = "0.1"
# Local mock HTTP server to stand in for S3 in fetcher tests.
wiremock = "0.6"
# Test-only: build synthetic OCI layer tarballs for the docker-less FC unpack
# fixtures. Production layer unpack shells the host `tar` via the seam, not this
# crate.
tar = "0.4"
# Test-only: compress synthetic OCI layer tarballs (gzip / zstd) so the
# real-conversion integration test can stage layers carrying the compressed OCI
# media types and exercise the real host `tar -z`/`--zstd` unpack path. Both are
# already in the dependency graph (flate2 via utoipa-swagger-ui, zstd via the
# FC rootfs build), so this adds no new build cost. flate2's default backend is
# pure-Rust (miniz_oxide), keeping the fixtures musl-clean.
flate2 = "1"
zstd = "0.13"
